--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ Thumbs.db
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+*pyc
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
