--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -1,17 +1,22 @@
-  <IfDefine !IS_DJANGOSTACK_LOADED>
-    Define IS_DJANGOSTACK_LOADED
-    WSGIDaemonProcess wsgi-djangostack processes=2 threads=15 display-name=%{GROUP}
-  </IfDefine>
-
-  WSGIScriptAlias /csc648-team13 '/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/wsgi.py'
-  <Directory "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/">
-      WSGIProcessGroup wsgi-djangostack
-      WSGIApplicationGroup %{GLOBAL}
-      <IfVersion < 2.3 >
-          Order allow,deny
-          Allow from all
-      </IfVersion>
-      <IfVersion >= 2.3>
-          Require all granted
-      </IfVersion>
-  </Directory>
+<IfDefine !IS_DJANGOSTACK_LOADED> 
+Define IS_DJANGOSTACK_LOADED
+WSGIDaemonProcess wsgi-djangostack   processes=2 threads=15    display-name=%{GROUP}
+</IfDefine> 
+<Directory "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13">
+    Options +MultiViews
+    AllowOverride All
+    <IfVersion < 2.3 >
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.3>
+        Require all granted
+    </IfVersion>
+    
+    WSGIProcessGroup wsgi-djangostack
+WSGIApplicationGroup %{GLOBAL}
+Require all granted
+                    
+</Directory>
+Alias /csc648-team13/static "/opt/bitnami/apps/django/lib/python3.6/site-packages/Django-2.0.3-py3.6.egg/django/contrib/admin/static"
+WSGIScriptAlias / '/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/wsgi.py'
