--- a/conf/httpd-vhosts.conf
+++ b/conf/httpd-vhosts.conf
@@ -1,13 +1,13 @@
 <VirtualHost *:80>
-    ServerName djangostack.example.com
-    ServerAlias www.djangostack.example.com
+    ServerName 35.230.88.48
+    ServerAlias http://35.230.88.48/
     DocumentRoot "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13"
 
     Include "/opt/bitnami/apps/django/django_projects/csc648-team13/conf/httpd-app.conf"
 </VirtualHost>
 <VirtualHost *:443>
-    ServerName djangostack.example.com
-    ServerAlias www.djangostack.example.com
+    ServerName 35.230.88.48
+    ServerAlias http://35.230.88.48/
     DocumentRoot "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13"
     SSLEngine on
     SSLCertificateFile "/opt/bitnami/apps/django/django_projects/csc648-team13/conf/certs/server.crt"
