Changed server name

--- a/conf/httpd-vhosts.conf
+++ b/conf/httpd-vhosts.conf
@@ -1,13 +1,13 @@
 <VirtualHost *:80>
-    ServerName 35.230.88.48
-    ServerAlias http://35.230.88.48/
+    ServerName csc648team13.com
+    ServerAlias www.csc648team13.com
     DocumentRoot "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13"
 
     Include "/opt/bitnami/apps/django/django_projects/csc648-team13/conf/httpd-app.conf"
 </VirtualHost>
 <VirtualHost *:443>
-    ServerName 35.230.88.48
-    ServerAlias http://35.230.88.48/
+    ServerName csc648team13.com
+    ServerAlias www.csc648team13.com
     DocumentRoot "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13"
     SSLEngine on
     SSLCertificateFile "/opt/bitnami/apps/django/django_projects/csc648-team13/conf/certs/server.crt"
