--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -1,6 +1,6 @@
 <IfDefine !IS_DJANGOSTACK_LOADED> 
 Define IS_DJANGOSTACK_LOADED
-WSGIDaemonProcess wsgi-djangostack   processes=2 threads=15    display-name=%{GROUP}
+WSGIDaemonProcess wsgi-djangostack   processes=2 threads=15    display-name=%{GROUP} python-path=/opt/bitnami/apps/django/django_projects/csc648-team13/
 </IfDefine> 
 <Directory "/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13">
     Options +MultiViews
