More apache conf stuff

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -21,4 +21,13 @@ Require all granted
 #Alias /static "/opt/bitnami/apps/django/lib/python3.6/site-packages/Django-2.0.3-py3.6.egg/django/contrib/admin/static"
 Alias /static /opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/static
 Alias /media /opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/media
+
+<Directory /opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/static>
+Require all granted
+</Directory>
+
+<Directory /opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/media>
+REquire all granted
+</Directory>
+
 WSGIScriptAlias / '/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/wsgi.py'
