--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Collected style
+csc648-team13/static/*
