Fixed typo in httpd-app.conf

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -27,7 +27,7 @@ Require all granted
 </Directory>
 
 <Directory /opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/media>
-REquire all granted
+Require all granted
 </Directory>
 
 WSGIScriptAlias / '/opt/bitnami/apps/django/django_projects/csc648-team13/csc648-team13/wsgi.py'
